<resources>
    <string name="app_name">mobileanywhere</string>
    <string name="title_activity_login">登陆</string>
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_email_account">请输入邮箱</string>
    <string name="prompt_nickname">请输入昵称</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">非法用户名</string>
    <string name="invalid_password">密码长度至少6位</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_app_name">Mobile Anywhere</string>
    <string name="password_login">密码登录</string>
    <string name="register_account">注册账号</string>
    <string name="comments_base_people_name">王二丫</string>
    <string name="comments_main_time">2019.03.01 10:43</string>
    <string name="great_tips_number">36</string>
    <string name="total_reBack_base">查看回复</string>
    <string name="share_text">分享文字</string>
    <string name="share_image">分享图片</string>
    <string name="share_video">分享视频</string>
    <string name="share_vocice">分享语音</string>
    <string name="submit_button">提交</string>
    <string name="pick_image_from_gallery">从相册选择</string>
    <string name="shot_image">拍照</string>
    <string name="play_tips">点击播放媒体</string>
</resources>
