<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/feedback_advice_drawable"
        android:textSize="14sp"
        android:id="@+id/feedback_ac_advice"
        android:padding="8dp"
        android:visibility="gone"
        />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:id="@+id/image_data"
            android:layout_gravity="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_image_from_gallery"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_corner"
            android:textColor="#ffffff"
            android:id="@+id/pick_image"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shot_image"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_corner"
            android:textColor="#ffffff"
            android:id="@+id/shot_image"
            />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_corner"
        android:textColor="#ffffff"
        android:id="@+id/feedback_ac_submit"
        />
    </LinearLayout>

</LinearLayout>