<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#75cac3"
    >


    <android.support.constraint.Guideline
        android:id="@+id/split_guidLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_app_name"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@id/split_guidLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/split_guidLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/main_activity_back"
        >

        <android.support.constraint.Guideline
            android:id="@+id/inner_guidLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
            />

        <TextView
            android:id="@+id/password_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_login"
            android:textSize="28sp"
            android:textStyle="normal"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/inner_guidLine"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32sp"
            />

        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="#b0b0b0"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/password_login_button"
            app:layout_constraintStart_toEndOf="@id/password_login_button"
            android:layout_marginStart="32dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/inner_guidLine"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        </FrameLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>